# embedded-crc32-rust

./: Cargo.toml  README.md
src/: bytewise_table.rs  lib.rs
tests/: crc32c.rs
