[package]
name = "embedded-crc32c"
version = "0.1.0"
edition = "2021"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "A `const`, single-choice opinionated tiny CRC32 implementation"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/embedded-crc32c-rust"
readme = "README.md"


[badges]


[features]
default = []


[dependencies]


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
